# game-of-life-3d

./: Cargo.toml  game-of-life-3d.d.ts  game-of-life-3d.js  game-of-life-3d_bg.wasm.d.ts  index.html
src/: main.rs
