[package]
name = "game-of-life-3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.1"
rand = "0.8.5"
smooth-bevy-cameras = "0.6.0"
wasm-bindgen = "0.2.83"

[profile.dev]
# Enable a small amount of optimization in debug mode
opt-level = 1

[profile.dev.package."*"]
# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
opt-level = 3
